// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterBar with currentMode=SHOW_COMPLETED should match expected snapshot 1`] = `
<div>
  <Button
    as="button"
    id="btnShowAll"
    onClick={[Function]}
  >
    All
  </Button>
  <Button
    as="button"
    id="btnShowCompleted"
    onClick={[Function]}
  >
    Completed
  </Button>
  <Button
    as="button"
    id="btnShowPending"
    onClick={[Function]}
  >
    Pending
  </Button>
  <Button
    as="button"
    disabled={false}
    onClick={[Function]}
  >
    Remove completed
  </Button>
  <Button
    as="button"
    id="btnSortDateUp"
    onClick={[Function]}
  >
    Date UP
  </Button>
  <Button
    as="button"
    id="btnSortDateDown"
    onClick={[Function]}
  >
    Date DOWN
  </Button>
</div>
`;

exports[`FilterBar with currentMode=SHOW_PENDING should match expected snapshot 1`] = `
<div>
  <Button
    as="button"
    id="btnShowAll"
    onClick={[Function]}
  >
    All
  </Button>
  <Button
    as="button"
    id="btnShowCompleted"
    onClick={[Function]}
  >
    Completed
  </Button>
  <Button
    as="button"
    id="btnShowPending"
    onClick={[Function]}
  >
    Pending
  </Button>
  <Button
    as="button"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </Button>
  <Button
    as="button"
    id="btnSortDateUp"
    onClick={[Function]}
  >
    Date UP
  </Button>
  <Button
    as="button"
    id="btnSortDateDown"
    onClick={[Function]}
  >
    Date DOWN
  </Button>
</div>
`;
